--- a/ElectroStoreAPI/appsettings.json
+++ b/ElectroStoreAPI/appsettings.json
@@ -8,5 +8,19 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "con": "Data Source=.\\SQLEXPRESS;Initial Catalog=Electronic Store;User ID=sa;Password=123"
+  },
+  "IpRateLimitingSettings": {
+    "EnableEndpointRateLimiting": true,
+    "StackBlockedRequests": false,
+    "RealIpHeader": "X-Real-IP",
+    "ClientIdHeader": "X-ClientId",
+    "HttpStatusCode": 429,
+    "GeneralRules": [
+      {
+        "Endpoint": "*",
+        "Period": "10s",
+        "Limit": 8
+      }
+    ]
   }
 }
